# pokersim

./: .gitignore  README.md  run_tests.sh
.cursor/commands/: code-review.md
.cursor/rules/: script.mdc  tests.mdc  uv.mdc
api/: CLASSES_SUMMARY.md  CMakeLists.txt  Card.h  Game.cpp  Game.h  Hand.cpp  Makefile  POKER_ENGINE.md  Player.cpp  Player.h  README.md  TESTING.md  main.cpp  pyproject.toml  test_game.cpp  test_player.cpp
api/docs/: README.md
api/python/pokersim/: __init__.py  agents.py  checkpoint_utils.py  config.py  gameplay.py  hand_logger.py  model.py  reward_shaping.py  state_encoder.py  utils.py
api/src/: Card.cpp  Deck.cpp  Deck.h  Game.cpp  Game.h  HTTPServer.cpp  HTTPServer.h  Hand.h  HandStrength.cpp  HandStrength.h  JsonSerializer.cpp  JsonSerializer.h  Player.cpp  Player.h  PokerEngineAPI.cpp  PokerEngineAPI.h  Pot.cpp  Pot.h  bindings.cpp  main.cpp
api/tests/: README.md  __init__.py  test_card.cpp  test_deck.cpp  test_hand.cpp  test_player.cpp  test_stateful_api.py  test_stateless_api.py
api/tests/snapshots/: all_in_on_flop.json  all_in_on_river.json  all_in_on_turn.json  all_in_preflop.json  side_pots.json  split_pot.json  three_way_all_in_split_pot.json
arena/: README.md  arena.py  engine.py  inspect_checkpoint.py  pyproject.toml  server.py
arena/templates/: index.html
arena/tests/: test_arena.py
elo/: README.md  engine.py  pyproject.toml  server.py  start.sh
elo/templates/: index.html
hand-viewer/: README.md  pyproject.toml  server.py  start.sh
hand-viewer/templates/: index.html
playground/: README.md  app.py  pyproject.toml  start.sh
playground/templates/: index.html
training/: .gitignore  README.md  batched_rollouts.py  benchmark_rollouts.py  config.py  continuous_trainer.py  env.py  eval.py  generate_rollouts.py  model_agent.py  monte_carlo.py  parallel_rollouts.py  ppo.py  pyproject.toml  requirements.txt  rl_model.py  rl_state_encoder.py  start_continuous_training.sh  start_rl_training_optimized.sh  train.py
training/tests/: test_rl_components.py
training_puffer/: README.md  train.py
website/: README.md  app.py  pyproject.toml  start.sh
website/templates/: index.html
