[project]
name = "pokersim-arena"
version = "0.1.0"
description = "Arena for evaluating Poker AI models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "flask>=3.0.0",
]

[project.scripts]
poker-arena = "arena:main"

