[project]
name = "pokersim-elo"
version = "0.1.0"
description = "ELO rating simulation system for Poker AI models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "flask>=3.0.0",
]

[project.scripts]
poker-elo = "elo:main"

