[project]
name = "pokersim-elo"
version = "0.1.0"
description = "ELO rating simulation system for Poker AI models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "flask>=3.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["engine", "server"]

[project.scripts]
poker-elo = "elo:main"

